# wordDFN

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: main.py  setting.py
src/worddfn/: dictionaryAPI.py
worddfn/: __main__.py  dictionaryAPI.py  setting.py
