[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worddfn"
authors = [
  { name="Shall Mcfield", email="xhall.mc@protonmail.com" },
]
description = "worddfn, lookup word meaning and forms via the wordnik api"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",

]
dependencies = [
    "pyperclip==1.8.2",
    "requests==2.30.0",
]

dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/SirX7/wordDFN"
"Bug Tracker" = "https://github.com/SirX7/wordDFN/issues"

[tool.hatch.version]
path = "worddfn/__init__.py"

[project.scripts]
word = "worddfn.__main__:main"